--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,8 @@ publish_to: 'none'
 version: 0.0.1-SNAPSHOT.20211202
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.15.0 <3.0.0"
+  flutter: ">=2.8.0"
 
 dependencies:
   flutter:
