--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,16 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_native_splash: ^1.3.2
+
+#configuration of splash screen
+flutter_native_splash:
+  image: "assets/app_splash_initial.png"
+  color: "#0000FF"
 
 flutter:
-
   uses-material-design: true
+
+  assets:
+    - assets/
+    - assets/brain/
