--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,11 +39,18 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_native_splash: ^1.3.2
+  flutter_launcher_icons: ^0.9.2
 
 #configuration of splash screen, if something change, run: `flutter pub run flutter_native_splash:create`
 flutter_native_splash:
   image: "assets/app_splash_initial.png"
   color: "#0000FF"
+
+#configuration of flutter_icons, if something change, run: `flutter pub run flutter_launcher_icons:main`
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/app_icon.png"
 
 flutter:
   uses-material-design: true
