--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dev_dependencies:
     sdk: flutter
   flutter_native_splash: ^1.3.2
   flutter_launcher_icons: ^0.9.2
+  flutter_app_name: ^0.1.0
+
 
 #configuration of splash screen, if something change, run: `flutter pub run flutter_native_splash:create`
 flutter_native_splash:
@@ -51,6 +53,10 @@ flutter_icons:
   android: "launcher_icon"
   ios: true
   image_path: "assets/app_icon.png"
+
+#configuration of flutter_icons, if something change, run: `flutter pub run flutter_app_name`
+flutter_app_name:
+  name: "BRAIN"
 
 flutter:
   uses-material-design: true
