--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   animations: ^2.0.2
   cupertino_icons: ^1.0.2
   flutter_zoom_drawer: ^2.1.1
+  flutter_svg: ^1.0.0
 
   # Utils
   faker: ^2.0.0
