--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,10 +23,12 @@ dependencies:
   flutter_zoom_drawer: ^2.1.1
   flutter_svg: ^1.0.0
   flutter_animator: ^3.2.0
+  page_view_indicators: ^2.0.0
 
   # Utils
   faker: ^2.0.0
   package_info_plus: ^1.3.0
+  flutter_countdown_timer: ^4.1.0
 
   #Other Modules
   citmatel_strawberry_trivia:
