--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   faker: ^2.0.0
   package_info_plus: ^1.3.0
   flutter_countdown_timer: ^4.1.0
+  circular_menu: ^1.2.3
 
   #Other Modules
   citmatel_strawberry_trivia:
