--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,14 +24,14 @@ dependencies:
   flutter_svg: ^1.0.0
   flutter_animator: ^3.2.0
   page_view_indicators: ^2.0.0
-
+  circular_menu: ^1.2.3
   video_player: ^2.2.10
 
   # Utils
   faker: ^2.0.0
   package_info_plus: ^1.3.0
   flutter_countdown_timer: ^4.1.0
-  circular_menu: ^1.2.3
+  url_launcher: ^6.0.18
 
   #Other Modules
   citmatel_strawberry_trivia:
