--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: citmatel_strawberry_brain
 description: Brain for CITMATEL's 'strawberry' project
 
-publish_to: 'none'
+publish_to: "none"
 
 version: 0.1.0-SNAPSHOT.20211221
 
@@ -24,8 +24,11 @@ dependencies:
   flutter_svg: ^1.0.0
   flutter_animator: ^3.2.0
   page_view_indicators: ^2.0.0
-  circular_menu: ^1.2.3
   video_player: ^2.2.10
+  circular_menu:
+    git:
+      url: https://github.com/Aidyl98/circular_menu
+      ref: develop
 
   # Utils
   faker: ^2.0.0
@@ -53,7 +56,6 @@ dev_dependencies:
   flutter_native_splash: ^1.3.2
   flutter_launcher_icons: ^0.9.2
   flutter_app_name: ^0.1.0
-
 
 #configuration of splash screen, if something change, run: `flutter pub run flutter_native_splash:create`
 flutter_native_splash:
