--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   package_info_plus: ^1.3.0
   flutter_countdown_timer: ^4.1.0
   url_launcher: ^6.0.18
+  auto_size_text: ^3.0.0
 
   #Other Modules
   citmatel_strawberry_trivia:
@@ -76,6 +77,12 @@ flutter_app_name:
 
 flutter:
   uses-material-design: true
+
+  fonts:
+    - family: Lobster
+      fonts:
+        - asset: assets/fonts/Lobster-Regular.ttf
+          weight: 400
 
   assets:
     - packages/citmatel_strawberry_brain/assets/character/background_dashboard.jpg
