--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -97,3 +97,4 @@ flutter:
     - packages/citmatel_strawberry_brain/assets/app/client_splash_1.mp4
     - packages/citmatel_strawberry_brain/assets/app/client_logo.png
     - packages/citmatel_strawberry_brain/assets/app/dev_logo_flat.png
+    - packages/citmatel_strawberry_brain/assets/app/libreria.png
