--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -95,6 +95,8 @@ flutter:
         - asset: assets/fonts/RobotoSlab-Variable.ttf
           weight: 400
   assets:
+    - assets/app_icon.png
+
     - packages/citmatel_strawberry_brain/assets/character/background_dashboard.jpg
     - packages/citmatel_strawberry_brain/assets/character/background_main.png
 
