--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,9 @@ dependencies:
 
   # Visual & Animations
   animations: ^2.0.2
+  cupertino_icons: ^1.0.4
   flutter_zoom_drawer: ^2.1.1
+  flutter_svg: ^1.0.3
   flutter_animator: ^3.2.1
   page_view_indicators: ^2.0.0
   video_player: ^2.2.10
@@ -31,11 +33,19 @@ dependencies:
   pushable_button: ^0.0.3
 
   # Utils
+  faker: ^2.0.0
   package_info_plus: ^1.3.0
+  flutter_countdown_timer: ^4.1.0
   url_launcher: ^6.0.18
   auto_size_text: ^3.0.0
 
-  #Other Modules 
+  #Other Modules
+  citmatel_strawberry_trivia:
+    path: ../citmatel_strawberry_trivia
+
+  citmatel_strawberry_hangman:
+    path: ../citmatel_strawberry_hangman
+
   citmatel_strawberry_dnd:
     path: ../citmatel_strawberry_dnd
 
@@ -53,9 +63,6 @@ dev_dependencies:
   flutter_native_splash: ^1.3.2
   flutter_launcher_icons: ^0.9.2
   flutter_app_name: ^0.1.0
-
-  #flutter pub run dependency_validator
-  dependency_validator: ^3.1.2
 
 #configuration of splash screen, if something change, run: `flutter pub run flutter_native_splash:create`
 flutter_native_splash:
