--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,7 +55,9 @@ dependencies:
     path: ../citmatel_strawberry_tools
 
   #DB
-  clean_repo_objectbox: ^0.2.1-SNAPSHOT.20220223
+  clean_repo_objectbox:
+    git:
+      url: https://github.com/JesusHdezWaterloo/clean_repo_objectbox
 
 dev_dependencies:
   flutter_test:
